# VideoExample

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  nvidia_local_video_source.cpp  testCuDecoder.cpp  testCuEncoder.cpp  testRTSPClient.cpp  testTrancoder.cpp  testVideoFrameProvider.cpp  testavpacketlist.cpp  userNodeList.cpp
include/: sn_gpucodec_api.h
include/decoder/: sn_cuvid_decoder.h
include/encoder/: NvEncoder.h  NvHWEncoder.h
include/transcoder/: BitStreamBufferSource.h  BitStreamSourceModule.h  H264BitStreamServerMediaSubsession.h
include/util/: Framebuffer.h  SN_Frame.h  colorspace.h  cuvid_codec_util.h  logger.h  sn_video_frame_provider.h  sn_video_packet_list.h
src/: CMakeLists.txt  sn_gpucodec_api.cpp
src/decoder/: sn_cuvid_decoder.cpp
src/encoder/: NvEncoder.cpp  NvHWEncoder.cpp
src/trancoder/: BitStreamBufferSource.cpp  BitStreamSourceModule.cpp  H264BitStreamServerMediaSubsession.cpp
src/util/: colorspace.cu  sn_video_frame_provider.cpp  sn_video_packet_list.cpp
